--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -5,16 +5,16 @@
     state: present
     update_cache: yes
     cache_valid_time: 3600
-  become: yes
+  become: true
 
-- name: start nginx
-  service:
-    name: nginx
-    state: started
-  become: yes
+  #- name: start nginx
+  #service:
+  #  name: nginx
+  #  state: started
+  #become: yes
 
-- name: index
-  template:
-    src: index.html.j2
-    dest: /var/www/html/index.html
+  #- name: index
+  #template:
+  #  src: index.html.j2
+  #  dest: /var/www/html/index.html
 
