--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,10 @@
 
-- name: install nginx
+#- name: install nginx
+- name: install docker
   hosts: all
   become: yes
   roles:
-    - nginx
+          #- nginx
+    - docker
 
 
