--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -34,6 +34,18 @@
 
       - docker-compose
 
+- name: Create a directory if it does not exist
+  file:
+    path: /srv-data/nginx/conf.d
+    state: directory
+    mode: '0755'
+
+- name: Create a directory if it does not exist
+  file:
+    path: /srv-data/nginx/html
+    state: directory
+    mode: '0755'
+
 - name: run container
   docker_container:
     name: mynginx2
